K8S/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: curl-container
    image: curlimages/curl:latest
    command: [ "sleep", "3600" ]
