K8S/authentication-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-authentication-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-auth
  template:
    metadata:
      labels:
        app: user-auth
    spec:
      containers:
      - name: user-auth
        image: cinodeo/userauth-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: user-auth-service
spec:
  type: NodePort
  selector:
    app: user-auth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30133
