K8S/mssql-ua-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-auth
  template:
    metadata:
      labels:
        app: mssql-auth
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2017-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - mountPath: /var/opt/mssql 
          name: mssql-data
      volumes:
      - name: mssql-data
        persistentVolumeClaim:
          claimName: ua-mssql-claim-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-service-user-auth
spec:
  type: ClusterIP
  selector:
    app: mssql-auth
  ports:
  - name: mssql-auth
    protocol: TCP
    port: 1433
    targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer-user-auth
spec:
  type: LoadBalancer 
  selector:
    app: mssql-auth
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
