K8S/ocelot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocelot-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocelot-gateway
  template:
    metadata:
      labels:
        app: ocelot-gateway
    spec:
      containers:
      - name: ocelot
        image: cinodeo/ocelot-gateway:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ocelot-gateway
spec:
  type: NodePort
  selector:
    app: ocelot-gateway
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5000
    nodePort: 30000
