K8S/product-catalog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: product-catalog-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: product-catalog
    template:
        metadata:
            labels:
                app: product-catalog
        spec:
            containers:
            - name: product-catalog
              image: cinodeo/productcatalog-service:latest
              imagePullPolicy: Always
              ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: product-catalog-service
spec:
    type: ClusterIP
    selector:
        app: product-catalog
    ports:
    - name: product-catalog
      protocol: TCP
      port: 8080
      targetPort: 8080
