K8S/product-catalog-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: product-catalog-np-srv
spec:
    type: NodePort
    selector:
        app: product-catalog
    ports:
    - name: product-catalog
      protocol: TCP
      port: 8080
      targetPort: 8080
