K8S/ocelot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ocelot-ingress
    namespace: default
    annotations: 
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: ocelot.ecommerce.com
      http:
        paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
                name: ocelot-gateway
                port:
                    number: 8081
